--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <header id="header">
         <img id="header-img"/>
         <nav id="nav-bar">
-            <a class="nav-link"></a>
+            <a class="nav-link">Home</a>
+            <a class="nav-link">Content</a>
+            <a class="nav-link">Contact</a>
         </nav>
     </header>
+    <main>
+        <section>
+            <iframe id="video"></iframe>
+        </section>
+        <section>
+            <form id="form">
+                <input id="email"/>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
