--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	</head>
 	<body>
 		<header id="header">
-			<img id="header-img" />
+			<img
+				id="header-img"
+				src="https://ae01.alicdn.com/kf/H1df192b5e4c14a57979dd3c984cab0f7F/Conjunto-de-Yoga-sin-costuras-para-mujer-ropa-deportiva-de-entrenamiento-gimnasio-Top-corto-de-manga.jpg_640x640.jpg"
+			/>
 			<nav id="nav-bar">
 				<a class="nav-link">Home</a>
 				<a class="nav-link">Content</a>
@@ -16,7 +19,15 @@
 		</header>
 		<main>
 			<section>
-				<iframe id="video"></iframe>
+				<iframe
+					width="560"
+					height="315"
+					src="https://www.youtube.com/embed/snbwSXBYiq0?si=YDbUjMBT60-1wJOx"
+					title="YouTube video player"
+					frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					allowfullscreen
+				></iframe>
 			</section>
 			<section>
 				<form id="form" action="https://www.freecodecamp.com/email-submit">
