--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 				</nav>
 			</header>
 			<main>
-				<section class="main-section" id="home"></section>
+				<section class="main-section" id="home">
+					<div>
+						Welcome to Tanimara's Home, where the journey of a programmer mom
+						unfolds in the digital realm! Join me as we explore fitness hacks,
+						mouthwatering recipes, insights into mom life, and satisfying DIY
+						projects—all while balancing the demands of building a career and
+						family life. Let's dive into the code and chaos together, finding
+						harmony between algorithms and caramel slices!
+					</div>
+				</section>
 				<section class="main-section" id="fitness">
 					<img
 						id="header-img"
