--- a/index.html
+++ b/index.html
@@ -33,43 +33,85 @@
 						harmony between algorithms and caramel slices!
 					</div>
 				</section>
-				<section class="main-section" id="fitness">
-					<img
-						id="header-img"
-						src="https://ae01.alicdn.com/kf/H1df192b5e4c14a57979dd3c984cab0f7F/Conjunto-de-Yoga-sin-costuras-para-mujer-ropa-deportiva-de-entrenamiento-gimnasio-Top-corto-de-manga.jpg_640x640.jpg"
-					/>
-					<iframe
-						id="video"
-						width="560"
-						height="315"
-						src="https://www.youtube.com/embed/snbwSXBYiq0?si=YDbUjMBT60-1wJOx"
-						title="YouTube video player"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-						allowfullscreen
-					></iframe>
-				</section>
-				<section class="main-section" id="recipes">
-					<div>
-						Easy, delicious OR healthy meals for the whole family. Pick one.
-						Stick to it.
-					</div>
-				</section>
-				<section class="main-section" id="momLife">
-					<div>
-						Learning tools, books, how-to-adult and PLAY! I investigate, come
-						with me and follow through my discoveries. But do your job, and
-						investigate too.
-					</div>
-				</section>
-				<section class="main-section" id="diy">
-					<div>
-						My attempts at DIY are more in the realm of the memes of
-						"Expectations x Reality", but hey, give me some slack. At least, I'm
-						trying.
-					</div>
-				</section>
-				<section class="main-section" id="newsletter">
+				<div class="categories">
+					<section class="category" id="fitness">
+						<div>
+							<h2>Fitness Corner</h2>
+							<p>
+								Welcome to the fitness corner of [Blog Name], where we're all
+								about balancing the demands of programming and parenting while
+								prioritizing our health and well-being! As a programmer mom with
+								energetic kiddos aged 4 and 7, finding time for fitness is both
+								a challenge and a necessity. Whether we're squeezing in quick
+								home workouts during naptime or turning family walks into
+								playful exercise adventures, we're committed to staying active
+								and setting a positive example for our little ones. Join me as
+								we embrace the chaos and joy of motherhood while nurturing our
+								bodies and minds through movement and exercise.
+							</p>
+							<img
+								id="header-img"
+								src="https://ae01.alicdn.com/kf/H1df192b5e4c14a57979dd3c984cab0f7F/Conjunto-de-Yoga-sin-costuras-para-mujer-ropa-deportiva-de-entrenamiento-gimnasio-Top-corto-de-manga.jpg_640x640.jpg"
+							/>
+							<iframe
+								id="video"
+								width="560"
+								height="315"
+								src="https://www.youtube.com/embed/snbwSXBYiq0?si=YDbUjMBT60-1wJOx"
+								title="YouTube video player"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+								allowfullscreen
+							></iframe>
+						</div>
+					</section>
+					<section class="category" id="recipes">
+						<div>
+							Welcome to the delicious realm of Tanimara's Home, where we
+							celebrate the joys of cooking and savoring homemade meals with our
+							loved ones! From quick and easy weeknight dinners that please
+							picky eaters to indulgent weekend baking projects that bring
+							smiles to every face, we're here to ignite your culinary
+							creativity and simplify mealtime. Join me as we explore
+							mouthwatering recipes, swap kitchen tips, and create lasting
+							memories one delicious bite at a time. Let's turn our kitchens
+							into the heart of our homes together!
+						</div>
+					</section>
+					<section class="category" id="momLife">
+						<div>
+							Welcome to the Mom Life hub of Tanimara's Home. Here, we share
+							stories, tips, and strategies for fostering a positive and mindful
+							family dynamic, all while finding moments of peace and self-care
+							amidst the hustle and bustle. From gentle parenting approaches to
+							practical solutions for everyday challenges, let's support each
+							other on this journey of raising thoughtful and resilient children
+							while staying grounded and sane ourselves. Together, we'll create
+							a harmonious home where love and learning thrive.
+						</div>
+					</section>
+					<section class="category" id="diy">
+						<div>
+							Welcome to the DIY corner of Tanimara's Home, where creativity
+							knows no bounds and every project is an opportunity for connection
+							and expression! From whimsical art projects that spark joy and
+							laughter to green-thumb adventures in our backyard garden, we're
+							all about embracing the beauty of handmade and cultivating a space
+							that reflects our unique style and personality. Join us as we
+							explore new techniques, repurpose old treasures, and infuse our
+							homes with love and creativity. Let's inspire each other to
+							unleash our inner artists and create spaces that truly feel like
+							home.
+						</div>
+					</section>
+				</div>
+				<section class="newsletter" id="newsletter">
+					<h2>
+						Stay in the loop, fellow moms and fitness enthusiasts! Sign up for
+						our newsletter to receive exclusive updates, helpful tips, and
+						inspiration straight to your inbox. Join our community and let's
+						embark on this journey together! 🌟 Subscribe now!
+					</h2>
 					<form id="form" action="https://www.freecodecamp.com/email-submit">
 						<input
 							name="email"
