--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				</nav>
 			</header>
 			<main>
-				<section class="main-section" id="home">
-					<div>
+				<section class="home" id="home">
+					<div class="category">
 						Welcome to Tanimara's Home, where the journey of a programmer mom
 						unfolds in the digital realm! Join me as we explore fitness hacks,
 						mouthwatering recipes, insights into mom life, and satisfying DIY
@@ -33,40 +33,41 @@
 						harmony between algorithms and caramel slices!
 					</div>
 				</section>
-				<div class="categories">
-					<section class="category" id="fitness">
-						<div>
-							<h2>Fitness Corner</h2>
-							<p>
-								Welcome to the fitness corner of [Blog Name], where we're all
-								about balancing the demands of programming and parenting while
-								prioritizing our health and well-being! As a programmer mom with
-								energetic kiddos aged 4 and 7, finding time for fitness is both
-								a challenge and a necessity. Whether we're squeezing in quick
-								home workouts during naptime or turning family walks into
-								playful exercise adventures, we're committed to staying active
-								and setting a positive example for our little ones. Join me as
-								we embrace the chaos and joy of motherhood while nurturing our
-								bodies and minds through movement and exercise.
-							</p>
-							<img
-								id="header-img"
-								src="https://ae01.alicdn.com/kf/H1df192b5e4c14a57979dd3c984cab0f7F/Conjunto-de-Yoga-sin-costuras-para-mujer-ropa-deportiva-de-entrenamiento-gimnasio-Top-corto-de-manga.jpg_640x640.jpg"
-							/>
-							<iframe
-								id="video"
-								width="560"
-								height="315"
-								src="https://www.youtube.com/embed/snbwSXBYiq0?si=YDbUjMBT60-1wJOx"
-								title="YouTube video player"
-								frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-								allowfullscreen
-							></iframe>
-						</div>
-					</section>
-					<section class="category" id="recipes">
-						<div>
+				<section id="categories">
+					<div class="category" id="fitness">
+						<h2>Fitness</h2>
+						<p>
+							Welcome to the fitness corner of [Blog Name], where we're all
+							about balancing the demands of programming and parenting while
+							prioritizing our health and well-being! As a programmer mom with
+							energetic kiddos aged 4 and 7, finding time for fitness is both a
+							challenge and a necessity. Whether we're squeezing in quick home
+							workouts during naptime or turning family walks into playful
+							exercise adventures, we're committed to staying active and setting
+							a positive example for our little ones. Join me as we embrace the
+							chaos and joy of motherhood while nurturing our bodies and minds
+							through movement and exercise.
+						</p>
+
+						<img
+							id="header-img"
+							src="https://ae01.alicdn.com/kf/H1df192b5e4c14a57979dd3c984cab0f7F/Conjunto-de-Yoga-sin-costuras-para-mujer-ropa-deportiva-de-entrenamiento-gimnasio-Top-corto-de-manga.jpg_640x640.jpg"
+						/>
+
+						<iframe
+							id="video"
+							width="560"
+							height="315"
+							src="https://www.youtube.com/embed/snbwSXBYiq0?si=YDbUjMBT60-1wJOx"
+							title="YouTube video player"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							allowfullscreen
+						></iframe>
+					</div>
+					<div class="category" id="recipes">
+						<h2>Recipes</h2>
+						<p>
 							Welcome to the delicious realm of Tanimara's Home, where we
 							celebrate the joys of cooking and savoring homemade meals with our
 							loved ones! From quick and easy weeknight dinners that please
@@ -76,10 +77,11 @@
 							mouthwatering recipes, swap kitchen tips, and create lasting
 							memories one delicious bite at a time. Let's turn our kitchens
 							into the heart of our homes together!
-						</div>
-					</section>
-					<section class="category" id="momLife">
-						<div>
+						</p>
+					</div>
+					<div class="category" id="momLife">
+						<h2>Mom Life</h2>
+						<p>
 							Welcome to the Mom Life hub of Tanimara's Home. Here, we share
 							stories, tips, and strategies for fostering a positive and mindful
 							family dynamic, all while finding moments of peace and self-care
@@ -88,10 +90,11 @@
 							other on this journey of raising thoughtful and resilient children
 							while staying grounded and sane ourselves. Together, we'll create
 							a harmonious home where love and learning thrive.
-						</div>
-					</section>
-					<section class="category" id="diy">
-						<div>
+						</p>
+					</div>
+					<div class="category" id="diy">
+						<h2>DIY</h2>
+						<p>
 							Welcome to the DIY corner of Tanimara's Home, where creativity
 							knows no bounds and every project is an opportunity for connection
 							and expression! From whimsical art projects that spark joy and
@@ -102,16 +105,18 @@
 							homes with love and creativity. Let's inspire each other to
 							unleash our inner artists and create spaces that truly feel like
 							home.
-						</div>
-					</section>
-				</div>
-				<section class="newsletter" id="newsletter">
-					<h2>
+						</p>
+					</div>
+				</section>
+				<section id="newsletter">
+					
+					<h2>Join our Newsletter</h2>
+					<p>
 						Stay in the loop, fellow moms and fitness enthusiasts! Sign up for
 						our newsletter to receive exclusive updates, helpful tips, and
 						inspiration straight to your inbox. Join our community and let's
 						embark on this journey together! 🌟 Subscribe now!
-					</h2>
+					</p>
 					<form id="form" action="https://www.freecodecamp.com/email-submit">
 						<input
 							name="email"
